--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <title>About Me</title>
     <script src="app.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Palanquin+Dark" rel="stylesheet">
   </head>
   <body>
-      <h1>About Chance</h1>
+      <div class="box"><h1>ABOUT ME</h1>
       <p>Seattle, WA</p>
       <p>Coding is fun</p>
-      <h2>Reasons I like coding</h2>
-      <ul>
-        <li>It's fun</li>
-        <li>I can create stuff</li>
-      </ul>
-    
+      <h2>REASONS I LIKE CODING</h2>
+      <p>It's fun</p>
+      <p>I can make cool stuff</p>
 
+
+</div>
 
 
 
