--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin|Palanquin+Dark" rel="stylesheet">
   </head>
   <body>
-      <div class="box"><h1>ABOUT ME</h1>
+    <div class="box"><h1>ABOUT ME</h1>
       <p>Seattle, WA</p>
       <p>Coding is fun</p>
       <h2>REASONS I LIKE CODING</h2>
       <p>It's fun</p>
       <p>I can make cool stuff</p>
-
-
-</div>
+      <p>It's challenging</p>
+    </div>
 
 
 
