--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <p>It's fun</p>
       <p>I can make cool stuff</p>
       <p>It's challenging</p>
+      <p>It's like solving a puzzle</p>
     </div>
 
 
