--- a/index.html
+++ b/index.html
@@ -7,15 +7,27 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin|Palanquin+Dark" rel="stylesheet">
   </head>
   <body>
-    <div class="box"><h1>ABOUT ME</h1>
+    <h1>ABOUT ME</h1>
       <p>Seattle, WA</p>
-      <p>Coding is fun</p>
       <h2>REASONS I LIKE CODING</h2>
       <p>It's fun</p>
       <p>I can make cool stuff</p>
       <p>It's challenging</p>
-      <p>It's like solving a puzzle</p>
-    </div>
+      <h2>MY TOP TEN PLACES I WANT TO VISIT</h2>
+      <ol>
+        <li>Frankfurt, Germany</li>
+        <li>Paris, France</li>
+        <li>Stockholm, Sweden</li>
+        <li>New York, USA</li>
+        <li>Bristol, England</li>
+        <li>Amsterdam, Netherlands</li>
+        <li>Reykjyavik, Iceland</li>
+        <li>Vancouver, BC</li>
+        <li>London, UK</li>
+        <li>Bangkok, Thailand</li>
+        <li>Tokyo, Japan</li>
+        <li>Barcelona, Spain</li>
+      </ol>
 
 
 
